WIP19 decrease segemnt spacing and fix alignment

--- a/www/css/routeInfoCard.css
+++ b/www/css/routeInfoCard.css
@@ -120,7 +120,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 18px;
     position: relative;
 }
 
@@ -380,7 +379,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 18px;
+    margin-top: 5px;
     position: relative;
 }
 
